--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,29 @@
         </item>
     </style>
 
+    <style name="ToolbarButton">
+        <item name="android:layout_width">@dimen/size_48</item>
+        <item name="android:layout_height">@dimen/size_48</item>
+        <item name="android:background">@drawable/toolbar_button_ripple</item>
+    </style>
+
+    <style name="SearchToolbarEditText" parent="AppTheme">
+        <item name="colorAccent">@color/white_FFFFFF</item>
+        <item name="colorControlNormal">@color/white_FFFFFF</item>
+        <item name="colorControlActivated">@color/white_FFFFFF</item>
+        <item name="colorControlHighlight">@color/white_FFFFFF</item>
+        <item name="android:textColorHint">@color/white_transparent_50</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
+        <item name="android:singleLine">true</item>
+        <item name="editTextBackground">@android:color/transparent</item>
+    </style>
+
+    <style name="SearchToolbarEditText.White">
+        <item name="colorAccent">@android:color/transparent</item>
+        <item name="colorControlActivated">@android:color/transparent</item>
+        <item name="colorControlHighlight">@color/dodger_blue_3884FF</item>
+        <item name="android:textColorHint">@color/cool_grey_90949C</item>
+        <item name="android:editTextColor">@color/gunmetal_4B4F56</item>
+    </style>
+
 </resources>
